        Reviewed by Oliver Hunt.

https://bugs.webkit.org/show_bug.cgi?id=31659
        Connection must be closed in case of Web Socket handshake error

        The network connection was closed, but the close event wasn't dispatched.

        Tested by websocket/tests/handshake-error.html, which is un-skipped now.

        * platform/network/cf/SocketStreamHandleCFNet.cpp: (WebCore::SocketStreamHandle::platformClose):
        Call client didHandle() method. This looks strange in CFNetwork implementation, because
        it's the client that asked to close the stream, so it shouldn't need the callback. It makes
        more sense in cross-process implementation, because closing is async there.



Canonical link: https://commits.webkit.org/42943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51516 268f45cc-cd09-0410-ab3c-d52691b4dbfc